Fixing a bug cause the clone method of transaction/commit block to produce errors and change docker image to be linux machine you can revert here for previous maven docker build