@@ -167,17 +167,13 @@
                     <reuseForks>false</reuseForks>
                     <forkedProcessTimeoutInSeconds>300000</forkedProcessTimeoutInSeconds>
                     <runOrder>alphabetical</runOrder>
-                    <argLine>@{argLine} -Xmx2048m</argLine>
                     <argLine>
+                        @{argLine} -Xmx2048m
                         --add-opens java.base/java.lang=ALL-UNNAMED
                         --add-opens java.base/java.util=ALL-UNNAMED
                         --add-opens java.base/java.math=ALL-UNNAMED
                         --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                         --add-opens java.base/java.security.spec=ALL-UNNAMED
-                        --add-opens java.base/java.security=ALL-UNNAMED
-                        --add-opens java.base/sun.security.util=ALL-UNNAMED
-                        --add-opens java.base/sun.security.x509=ALL-UNNAMED
-                        --add-opens jdk.crypto.ec/sun.security.ec=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
